# prof-cmake

./: readme.md
chapters/03-minimal-project/: readme.md
chapters/03-minimal-project/src/: CMakeLists.txt
chapters/04-building-simple-targets/: reamde.md
chapters/04-building-simple-targets/src/: CMakeLists.txt  main.cpp  mylib.cpp  reporter.cpp
chapters/06-variables/: readme.md
chapters/06-variables/src/: CMakeLists.txt
chapters/07-flow-control/: readme.md
chapters/07-flow-control/src/: CMakeLists.txt
chapters/07-flow-control/src-loops/: CMakeLists.txt
chapters/08-subdirectories/: readme.md
chapters/08-subdirectories/src/: CMakeLists.txt
chapters/08-subdirectories/src/cmake/: include.cmake
chapters/08-subdirectories/src/mysub/: CMakeLists.txt
chapters/09-functions/: readme.md
chapters/09-functions/src/: CMakeLists.txt
chapters/09-functions/src/arguments/: CMakeLists.txt
chapters/09-functions/src/keywords_parsing/: CMakeLists.txt
chapters/09-functions/src/returning_value/: CMakeLists.txt
chapters/09-functions/src/using_source_file/: CMakeLists.txt  template.cpp.in
chapters/09-functions/src/using_source_file/subdir/: CMakeLists.txt
chapters/10-properties/: readme.md
chapters/10-properties/src/: CMakeLists.txt
chapters/10-properties/src/global/: CMakeLists.txt
chapters/11-generator-expressions/: readme.md
chapters/12-modules/: readme.md
chapters/12-modules/src/: CMakeLists.txt
chapters/13-Policies/: readme.md
chapters/14-debugging/: readme.md
chapters/14-debugging/src/: CMakeLists.txt
chapters/14-debugging/src/check/src/: CMakeLists.txt
chapters/14-debugging/src/context/src/: CMakeLists.txt
chapters/14-debugging/src/context/src/graphics/: CMakeLists.txt
chapters/14-debugging/src/context/src/networking/: CMakeLists.txt
chapters/14-debugging/src/log_level/src/: CMakeLists.txt
chapters/14-debugging/src/pprint/src/: CMakeLists.txt  src.cpp
chapters/15-build-type/: readme.md
chapters/15-build-type/src/custom_build_type/: CMakeLists.txt
chapters/15-build-type/src/multi_and_mono_builders/: CMakeLists.txt
